src/objects/MUSW__Planning_Proposed_Use__c.object
<CustomObject>
    <description>Before and After Zoning Use for Master Projects</description>
    <fields>
        <fullName>MUSW__Existing_Floor_Area__c</fullName>
        <label>Existing Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Existing_Number_of_Units__c</fullName>
        <inlineHelpText>Existing amount of Item</inlineHelpText>
        <label>Existing Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Existing_Use__c</fullName>
        <label>Existing Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Item__c</fullName>
        <label>Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit</fullName>
                    <default>true</default>
                    <label>Unit</label>
                </value>
                <value>
                    <fullName>Parcel</fullName>
                </value>
                <value>
                    <fullName>Lot</fullName>
                </value>
                <value>
                    <fullName>Building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MUSW__Project2__c</referenceTo>
        <relationshipLabel>Proposed Uses</relationshipLabel>
        <relationshipName>Proposed_Uses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MUSW__Master_Project__c</referenceTo>
        <relationshipName>Proposed_Uses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Proposed_Floor_Area__c</fullName>
        <label>Proposed Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Proposed_Number_of_Units__c</fullName>
        <inlineHelpText>Proposed amount of Item (count of existing plus new)</inlineHelpText>
        <label>Proposed Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Proposed_Use__c</fullName>
        <label>Proposed Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Size_Type__c</fullName>
        <label>Size Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Item__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Area</fullName>
                    <default>true</default>
                    <label>Area</label>
                </value>
                <value>
                    <fullName>Floor Space</fullName>
                </value>
                <value>
                    <fullName>Footprint</fullName>
                </value>
                <value>
                    <fullName>Frontage</fullName>
                </value>
                <value>
                    <fullName>Height</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Size_Unit__c</fullName>
        <inlineHelpText>Size measured in units of...</inlineHelpText>
        <label>Size Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Size_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sq Ft</fullName>
                    <default>true</default>
                    <label>Sq Ft</label>
                </value>
                <value>
                    <fullName>Acres</fullName>
                </value>
                <value>
                    <fullName>Hectares</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Stories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Proposed Use</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposed Uses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>